syntax = "proto3";

package ai.metathings.service.core;

enum CoreState {
	CORE_STATE_UNKNOWN = 0;
	CORE_STATE_ONLINE = 1;
	CORE_STATE_OFFLINE = 2;
}

message Core {
	string id = 1;
	string name = 2;
	string project_id = 3;
	string owner_id = 4;
	CoreState state = 5;
}
