syntax = "proto3";

package ai.metathings.service.core;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "github.com/bigdatagz/metathings/pkg/proto/common/state/core_state.proto";
import "core.proto";

message PatchCoreRequest {
	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue name = 2;
	ai.metathings.state.CoreState state = 3;
}

message PatchCoreResponse {
	Core core = 1;
}
